Add umap plot for prediction plot

--- a/analyses/integration-with-scrna-seq-data/01-integration-with-scrna-seq-data.Rmd
+++ b/analyses/integration-with-scrna-seq-data/01-integration-with-scrna-seq-data.Rmd
@@ -284,13 +284,27 @@ plot <- ggplot(atac_query@meta.data, aes(x = prediction.score.max)) +
   geom_histogram(binwidth = 0.05, fill = "skyblue", color = "white") +
   geom_vline(xintercept = 0.5, color = "red", linetype = "dashed", size = 1) +
   labs(title = "Histogram of Prediction Scores", x = "prediction.score.max", y = "Count") +
-  theme_minimal()
+  theme_plot()
 print(plot)
 ggsave(file = name, plot = plot, width = 8, height = 6, device = "png")
 
 # Print thresholding summary
 # How many cells were confidently labeled (e.g., with a score > 0.5)?
 print(table(atac_query$prediction.score.max > 0.5))
+
+
+# Create a new metadata column indicating high/low prediction score
+atac_query$score_group <- ifelse(atac_query$prediction.score.max > 0.5, "Above 0.5", "0.5 or Below")
+
+# Plot UMAP colored by score group
+name <- paste0(plots_dir, "/", glue::glue("plot-umap-cells-prediction.score.max.png"))
+p <- DimPlot(atac_query, reduction = "umap", group.by = "score_group") +
+  scale_color_manual(values = c("Above 0.5" = "#1b9e77", "0.5 or Below" = "#d95f02")) +
+  labs(title = "UMAP: Cells by Prediction Score Group") +
+  theme_plot()
+print(p)
+ggsave(file = name, plot = p, width = 8, height = 6, device = "png")
+
 ```
 
 ## Number of cells for the scATAC-seq cell predictions
